Wed Mar 13 20:05:01 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/ManyTopicMultiProcess/DataReaderListener1.cpp:
        * tests/DCPS/ManyTopicMultiProcess/DataReaderListener4.cpp:
        * tests/DCPS/ManyTopicMultiProcess/Foo1Def.idl:
        * tests/DCPS/ManyTopicMultiProcess/Foo4Def.idl:
        * tests/DCPS/ManyTopicMultiProcess/ManyTopicMultiProcess.mpc:
        * tests/DCPS/ManyTopicMultiProcess/Writer.cpp:
        * tests/DCPS/ManyTopicMultiProcess/manyfoolib_export.h:
        * tests/DCPS/ManyTopicMultiProcess/publisher.cpp:
        * tests/DCPS/ManyTopicMultiProcess/subscriber.cpp:

         Removed dependancy on tests/DCPS/ManyTopicTypes

Tue Mar 12 21:55:35 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * bin/dcps_tests.lst:

          Add ManyTopicMultiProcess test

        * tests/DCPS/ManyTopicMultiProcess/DataReaderListener1.cpp:
        * tests/DCPS/ManyTopicMultiProcess/DataReaderListener4.cpp:
        * tests/DCPS/ManyTopicMultiProcess/Writer.cpp:
        * tests/DCPS/ManyTopicMultiProcess/publisher.cpp:
        * tests/DCPS/ManyTopicMultiProcess/subscriber.cpp:

          Made include path to MultiTopicType relative and fixed
          missing OS_NS_time include statements.

        * tests/DCPS/ManyTopicMultiProcess/run_test.pl:

          Added a missing unlink statement for the repo ior file.


Tue Mar 12 21:31:08 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          If a single message is both dispose & unregister,
          the message block needs to be duplicated so that each
          operation can read the key fields.

        * dds/DCPS/RTPS/Spdp.h:
        * dds/DCPS/RTPS/Spdp.cpp:

          Use a separate buffer for writing instead of sharing the
          one used for reading.  The initial implementation never
          overlapped reads and writes, but now receiving data from
          a new remote participant causes our announcement to be